--- a/dbms.vcxproj
+++ b/dbms.vcxproj
@@ -103,6 +103,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AddDatabaseDialog.cpp" />
     <ClCompile Include="base\BTree_delete.cpp" />
     <ClCompile Include="base\BTree_find.cpp" />
     <ClCompile Include="base\record\record_delete.cpp" />
@@ -143,6 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="ui\login.h" />
+    <QtMoc Include="AddDatabaseDialog.h" />
     <ClInclude Include="base\block\constraintBlock.h" />
     <ClInclude Include="base\block\fieldBlock.h" />
     <ClInclude Include="base\block\indexBlock.h" />
