右键菜单栏的数据库可以新建表 包括字段名 、类型（五种选择）、长度、完整性

--- a/dbms.vcxproj.filters
+++ b/dbms.vcxproj.filters
@@ -150,6 +150,7 @@
     </ClCompile>
     <ClCompile Include="base\record\record_restore.cpp" />
     <ClCompile Include="AddDatabaseDialog.cpp" />
+    <ClCompile Include="AddTableDialog.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="debug.h">
@@ -197,5 +198,6 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="AddDatabaseDialog.h" />
+    <QtMoc Include="AddTableDialog.h" />
   </ItemGroup>
 </Project>
