--- a/dbms.vcxproj
+++ b/dbms.vcxproj
@@ -104,6 +104,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AddDatabaseDialog.cpp" />
+    <ClCompile Include="AddTableDialog.cpp" />
     <ClCompile Include="base\BTree_delete.cpp" />
     <ClCompile Include="base\BTree_find.cpp" />
     <ClCompile Include="base\record\record_delete.cpp" />
@@ -145,6 +146,7 @@
   <ItemGroup>
     <QtMoc Include="ui\login.h" />
     <QtMoc Include="AddDatabaseDialog.h" />
+    <QtMoc Include="AddTableDialog.h" />
     <ClInclude Include="base\block\constraintBlock.h" />
     <ClInclude Include="base\block\fieldBlock.h" />
     <ClInclude Include="base\block\indexBlock.h" />
