--- a/dbms.vcxproj
+++ b/dbms.vcxproj
@@ -115,6 +115,7 @@
     <ClCompile Include="base\record\record_update_index.cpp" />
     <ClCompile Include="base\table\table.cpp" />
     <ClCompile Include="debug.cpp" />
+    <ClCompile Include="EditTableDialog.cpp" />
     <ClCompile Include="manager\dbManager.cpp" />
     <ClCompile Include="base\record\record_check.cpp" />
     <ClCompile Include="parse\parse.cpp" />
@@ -154,6 +155,7 @@
     <QtMoc Include="ui\mainWindow.h" />
     <ClInclude Include="base\BTree.h" />
     <ClInclude Include="base\table\table.h" />
+    <QtMoc Include="EditTableDialog.h" />
     <ClInclude Include="manager\databaseBlock.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="manager\dbManager.h" />
