--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /DBMS_ROOT
 /log/logManager.cpp
 /base/database.h
+/enc_temp_folder/dc9de7f070d17d5ae132f84af26fc85/AddUserDialog.cpp
